--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,17 @@ block content
   h1= title
   p New Page #{title}
   button(type="button",class="btn btn-success") Press Me
+  br
+  br
+  div(id='target') Display
+  br
+  
+  script.
+    var client_count = 0;
+    function update(){
+      client_count++
+      document.getElementById("target").innerHTML = `Value now ${client_count}`
+    } 
+
+
+  
